# LcGP

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
examples/: benchmark_lmc_vs_constrained.py  compare_likelihoods.py  constrained_example.py  simple_mogp.py  simple_sogp.py  test_constrained_kernel.py  test_pca_init.py
src/LcGP/mogp/: core.py  fast_lcm.py  optimization.py
src/LcGP/mogp/kernels/: ConstrainedLMCKernel.py  LCMKernel.py  LMCKernel.py  LMCKernelFree.py  __init__.py
src/LcGP/mogp/likelihoods/: lcm_implementation.py  log_likelihood_efficient.py  log_likelihood_nonseparable.py  test_2ll.py  test_3ll.py  test_ll_nonseparable.py  validation_non_separable.py
src/LcGP/sogp/: core.py
src/LcGP/utils/: data_utils.py
tests/: test_import.py
