[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LcGP"
version = "0.1.0"
description = "Linearly Constrained and Multi-Output Gaussian Processes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "joblib",
    "scikit-learn"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
